--- a/Views/Master.cshtml
+++ b/Views/Master.cshtml
@@ -4,7 +4,10 @@
 	Layout = null;
 }
 
-<html>
+
+<!DOCTYPE HTML>
+<html lang="en">
+  
 	<head>
 		<title>Hello, World :-)</title>
 		<meta charset="utf-8" />
