--- a/Views/Master.cshtml
+++ b/Views/Master.cshtml
@@ -17,6 +17,9 @@
         <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></noscript>
 	
+        <!--Trying to load here instead from body --->
+        <link rel="stylesheet" href="@Url.Content("~/css/main.css")" />
+        @RenderSection("Header", required: false)
 		
 	</head>
 	
@@ -24,9 +27,10 @@
        <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
         <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"></noscript>
 
-		<link rel="stylesheet" href="/css/main.css" />
+        <!--Trying to load from HEAD instead-->
+		<!--<link rel="stylesheet" href="/css/main.css" />-->
 	   
- <!-- Optional JavaScript -->
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
