--- a/Views/FormDemo.cshtml
+++ b/Views/FormDemo.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels;
-
-@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.AboutPage>
+@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.FormDemo>
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @{
 	Layout = "Master.cshtml";
 }
+
 
 <!-- Jumbotron, w title -->
     <div class="jumbotron text-center jumbotron-fluid">
@@ -12,11 +12,23 @@
                 <h1 class="display-1">@Model.Value("pageTitle")</h1>
             </div>
         </div>
+        
+
+@using MyProject.Models;
 
 <!-- Main -->
 <section id="main" class="wrapper">
     <div class="container">
 
         @Model.Value("bodyText")
+
+        
+@{
+    Html.RenderPartial("~/Views/Partials/ContactForm.cshtml", new ContactFormViewModel());
+}
+
+
+
     </div>
-</section>    
+</section>  
+
